Fix: move code frop page.tsx to NFT.tsx, wrap useSearchParams in <Suspense>

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -7,15 +7,6 @@
   height: 100%;
 }
 
-.main {
-  padding: 10px;
-  position: relative;
-  @include desktop {
-    padding: 40px;
-    min-height: 650px;
-  }
-}
-
 @media (prefers-color-scheme: dark) {
   .page {
     --gray-rgb: 255, 255, 255;
@@ -25,71 +16,4 @@
     --button-primary-hover: #ccc;
     --button-secondary-hover: #1a1a1a;
   }
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -8px;
-  margin-right: -8px;
-
-  @include desktop {
-    margin-left: -15px;
-    margin-right: -15px;
-  }
-}
-
-.col {
-  flex: 1;
-  flex-basis: 50%;
-  max-width: 50%;
-  padding: 8px;
-  height: 100%;
-  @include tablet {
-    flex-basis: 25%;
-    max-width: 25%;
-  }
-
-  @include desktop {
-    padding: 15px;
-    flex-basis: 33%;
-    max-width: 33%;
-  }
-
-  @include desktoplg {
-    flex-basis: 25%;
-    max-width: 25%;
-  }
-}
-
-.mainLeft {
-  @include desktop {
-    position: absolute;
-    width: 340px;
-    padding-right: 30px;
-  }
-}
-
-.mainRight {
-  @include desktop {
-    margin-left: 340px;
-  }
-}
-
-.nftCards {
-  max-height: 100vh;
-  overflow: scroll;
-
-  @include desktop {
-    max-height: 120vh;
-  }
-}
-
-.filterButtons {
-  position: relative;
-}
-
-.nftMore {
-  padding-top: 15px;
-  text-align: center;
 }
